Fix pause button functionality for automated migration timer
Added missing backend API endpoint and corrected frontend implementation to enable proper pause/resume control of the automated migration timer.

Backend changes:
- Added /api/automigrate/toggle-timer POST endpoint to start/stop the systemd timer
- Endpoint uses systemctl to control proxmox-balance-automigrate.timer
- Returns verified timer status after toggle operation

Frontend changes:
- Fixed incorrect API endpoint URL from /api/automation/toggle-timer to /api/automigrate/toggle-timer
- Removed confirmation popup for immediate toggle action
- Replaced alert() error popups with console.error() for better UX

--- a/index.html
+++ b/index.html
@@ -4871,21 +4871,19 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                         {automationStatus.enabled && (
                           <button
                             onClick={async () => {
-                              if (confirm(`Are you sure you want to ${automationStatus.timer_active ? 'pause' : 'resume'} automated migrations?`)) {
-                                try {
-                                  const response = await fetch('/api/automation/toggle-timer', {
-                                    method: 'POST',
-                                    headers: { 'Content-Type': 'application/json' },
-                                    body: JSON.stringify({ active: !automationStatus.timer_active })
-                                  });
-                                  if (response.ok) {
-                                    fetchAutomationStatus();
-                                  } else {
-                                    alert('Failed to toggle timer');
-                                  }
-                                } catch (error) {
-                                  alert('Error: ' + error.message);
+                              try {
+                                const response = await fetch('/api/automigrate/toggle-timer', {
+                                  method: 'POST',
+                                  headers: { 'Content-Type': 'application/json' },
+                                  body: JSON.stringify({ active: !automationStatus.timer_active })
+                                });
+                                if (response.ok) {
+                                  fetchAutomationStatus();
+                                } else {
+                                  console.error('Failed to toggle timer');
                                 }
+                              } catch (error) {
+                                console.error('Error toggling timer:', error);
                               }
                             }}
                             className={`px-3 py-1.5 rounded-lg text-sm font-semibold transition-colors flex items-center gap-2 ${
