Add automated recommendations generation with dynamic cluster-aware intervals
Major performance improvements and UX enhancements for recommendation generation:

Backend improvements:
- Add storage caching in generate_recommendations() to reduce API calls from ~123 to 4
- Improves recommendation generation time from ~113s to ~5s (23x faster)
- Cache all node storage data once per run, reuse for compatibility checks
- Add new generate_recommendations.py script for automated background generation
- Implement dynamic timer intervals that auto-adjust based on cluster size:
  * <50 guests: 10min interval
  * 50-149 guests: 15min interval
  * 150-299 guests: 20min interval
  * 300-499 guests: 30min interval
  * 500+ guests: 60min interval
- Add safety margin: interval always ≥ 2x generation time to prevent overlaps
- Create systemd timer (proxmox-balance-recommendations.timer) for automated generation
- Timer self-adjusts on every run as cluster grows/shrinks

API changes:
- Split recommendations endpoint: GET for cached, POST for generation
- Add build_storage_cache() function to pre-fetch all node storage
- Update check_storage_compatibility() to use cached storage data
- Cache recommendations to recommendations_cache.json with timestamp

Frontend improvements:
- Simplify UI by removing interval selector and pause/resume controls
- Set fixed 2-minute auto-refresh for UI (fetches cached data only)
- Update messaging to explain backend auto-generation (10-60min adaptive)
- Keep "Generate Now" button for manual on-demand generation
- Display generation timestamp with explanation of backend timer

Installation/Update:
- Update install.sh to enable proxmox-balance-recommendations.timer
- Update update.sh to deploy new timer and make scripts executable
- Add automatic service enablement for existing installations
- Default timer interval: 10min (auto-adjusts on first run)

This reduces API load on large clusters while keeping recommendations fresh
and provides a better user ex

--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@ const ProxBalanceLogo = ({ size = 32 }) => (
           const [darkMode, setDarkMode] = useState(true);
           const [config, setConfig] = useState(null);
           const [autoRefreshInterval, setAutoRefreshInterval] = useState(60 * 60 * 1000);
+          const RECOMMENDATIONS_REFRESH_INTERVAL = 2 * 60 * 1000; // Fixed 2-minute interval for UI refresh
           const [showSettings, setShowSettings] = useState(false);
           const [showAdvancedSettings, setShowAdvancedSettings] = useState(false);
           const [currentPage, setCurrentPage] = useState('dashboard'); // 'dashboard', 'settings', or 'automation'
@@ -853,7 +854,30 @@ const ProxBalanceLogo = ({ size = 32 }) => (
             }
           };
 
-          const fetchRecommendations = async () => {
+          // Fetch cached recommendations (GET - fast, no regeneration)
+          const fetchCachedRecommendations = async () => {
+            if (!data) return;
+            try {
+              const response = await fetch(`${API_BASE}/recommendations`);
+              const result = await response.json();
+              if (result.success) {
+                setRecommendations(result.recommendations);
+                setRecommendationData(result);
+                if (result.threshold_suggestions) {
+                  setThresholdSuggestions(result.threshold_suggestions);
+                }
+              } else if (result.cache_missing) {
+                // No cache exists, generate initial recommendations
+                console.log('No cached recommendations, generating initial set');
+                generateRecommendations();
+              }
+            } catch (err) {
+              console.error('Error fetching cached recommendations:', err);
+            }
+          };
+
+          // Generate new recommendations (POST - slower, full computation)
+          const generateRecommendations = async () => {
             if (!data) return;
             setLoadingRecommendations(true);
             try {
@@ -870,17 +894,20 @@ const ProxBalanceLogo = ({ size = 32 }) => (
               const result = await response.json();
               if (result.success) {
                 setRecommendations(result.recommendations);
-                setRecommendationData(result);  // Store full response including ai_enhanced flag
+                setRecommendationData(result);
                 if (result.threshold_suggestions) {
                   setThresholdSuggestions(result.threshold_suggestions);
                 }
               }
             } catch (err) {
-              console.error(err);
+              console.error('Error generating recommendations:', err);
             } finally {
               setLoadingRecommendations(false);
             }
           };
+
+          // Legacy alias for backwards compatibility
+          const fetchRecommendations = fetchCachedRecommendations;
 
           const fetchAiRecommendations = async () => {
             if (!data) return;
@@ -1760,6 +1787,17 @@ const ProxBalanceLogo = ({ size = 32 }) => (
               fetchNodeScores();
             }
           }, [data, cpuThreshold, memThreshold, iowaitThreshold, maintenanceNodes]);
+
+          // Auto-refresh recommendations on fixed 2-minute interval
+          useEffect(() => {
+            if (!data) return;
+
+            const interval = setInterval(() => {
+              fetchRecommendations();
+            }, RECOMMENDATIONS_REFRESH_INTERVAL);
+
+            return () => clearInterval(interval);
+          }, [data]);
 
           // Render charts when data changes or chart period changes
           useEffect(() => {
@@ -7284,14 +7322,23 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                                 AI Enhanced
                               </span>
                             )}
+                            {recommendationData?.generated_at && (
+                              <span className="text-xs text-gray-500 dark:text-gray-500">
+                                • Generated: {(() => {
+                                  const genTime = new Date(recommendationData.generated_at);
+                                  return formatLocalTime(genTime);
+                                })()} (backend auto-generates every 10-60min based on cluster size)
+                              </span>
+                            )}
                           </div>
                         </div>
                       </div>
                       <div className="flex items-center gap-2">
                         <button
-                          onClick={fetchRecommendations}
+                          onClick={generateRecommendations}
                           disabled={loadingRecommendations || !data}
                           className="flex items-center gap-2 px-4 py-2 bg-orange-600 dark:bg-orange-500 text-white rounded-lg hover:bg-orange-700 dark:hover:bg-orange-600 disabled:bg-gray-400 disabled:cursor-not-allowed transition-all duration-200"
+                          title="Manually generate new recommendations now"
                         >
                           {loadingRecommendations ? (
                             <>
@@ -7301,7 +7348,7 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                           ) : (
                             <>
                               <RefreshCw size={18} />
-                              Generate Recommendations
+                              Generate Now
                             </>
                           )}
                         </button>
