--- a/index.html
+++ b/index.html
@@ -5206,24 +5206,48 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                             const seconds = elapsedSeconds % 60;
                             const elapsedTime = minutes > 0 ? `${minutes}m ${seconds}s` : `${seconds}s`;
 
+                            // Determine if automated or manual
+                            const isAutomated = migration.initiated_by === 'automated';
+
                             return (
-                              <div key={idx} className="text-sm bg-blue-50 dark:bg-blue-900/20 rounded p-2 border-2 border-blue-300 dark:border-blue-600 animate-pulse">
+                              <div key={idx} className={`text-sm rounded p-2 border-2 animate-pulse ${
+                                isAutomated
+                                  ? 'bg-blue-50 dark:bg-blue-900/20 border-blue-300 dark:border-blue-600'
+                                  : 'bg-purple-50 dark:bg-purple-900/20 border-purple-300 dark:border-purple-600'
+                              }`}>
                                 <div className="flex items-center justify-between">
                                   <div className="flex items-center gap-2 flex-1">
                                     <span className="text-gray-900 dark:text-white font-medium">{migration.name} ({migration.vmid})</span>
                                     <span className="text-gray-500 dark:text-gray-400 text-xs">
-                                      {migration.source_node} → ?
+                                      {migration.source_node} → {migration.target_node || '?'}
                                     </span>
+                                    {!isAutomated && (
+                                      <span className="px-1.5 py-0.5 bg-purple-100 dark:bg-purple-900/40 text-purple-700 dark:text-purple-300 text-[10px] font-semibold rounded border border-purple-300 dark:border-purple-600">
+                                        MANUAL
+                                      </span>
+                                    )}
                                   </div>
-                                  <span className="px-2 py-0.5 rounded text-xs font-semibold bg-blue-100 text-blue-700 dark:bg-blue-900/30 dark:text-blue-400 flex items-center gap-1">
+                                  <span className={`px-2 py-0.5 rounded text-xs font-semibold flex items-center gap-1 ${
+                                    isAutomated
+                                      ? 'bg-blue-100 text-blue-700 dark:bg-blue-900/30 dark:text-blue-400'
+                                      : 'bg-purple-100 text-purple-700 dark:bg-purple-900/30 dark:text-purple-400'
+                                  }`}>
                                     <RefreshCw size={12} className="animate-spin" />
                                     Running
                                   </span>
                                 </div>
                                 {migration.starttime && (
-                                  <div className="mt-1 text-xs text-gray-600 dark:text-gray-400 flex items-center gap-3">
+                                  <div className={`mt-1 text-xs flex items-center gap-3 ${
+                                    isAutomated
+                                      ? 'text-gray-600 dark:text-gray-400'
+                                      : 'text-purple-600 dark:text-purple-400'
+                                  }`}>
                                     <span>Started: {new Date(migration.starttime * 1000).toLocaleTimeString()}</span>
-                                    <span className="font-semibold text-blue-600 dark:text-blue-400">Elapsed: {elapsedTime}</span>
+                                    <span className={`font-semibold ${
+                                      isAutomated
+                                        ? 'text-blue-600 dark:text-blue-400'
+                                        : 'text-purple-600 dark:text-purple-400'
+                                    }`}>Elapsed: {elapsedTime}</span>
                                   </div>
                                 )}
                               </div>
@@ -5370,11 +5394,14 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                                       ? 'bg-red-100 text-red-700 dark:bg-red-900/30 dark:text-red-400'
                                       : migration.status === 'skipped'
                                       ? 'bg-yellow-100 text-yellow-700 dark:bg-yellow-900/30 dark:text-yellow-400'
+                                      : migration.status === 'timeout'
+                                      ? 'bg-orange-100 text-orange-700 dark:bg-orange-900/30 dark:text-orange-400'
                                       : 'bg-gray-100 text-gray-700 dark:bg-gray-900/30 dark:text-gray-400'
                                   }`}>
                                     {migration.status === 'completed' && <CheckCircle size={12} />}
                                     {migration.status === 'failed' && <XCircle size={12} />}
                                     {migration.status === 'skipped' && <AlertTriangle size={12} />}
+                                    {migration.status === 'timeout' && <Clock size={12} />}
                                     {migration.status}
                                   </span>
                                 </div>
