--- a/index.html
+++ b/index.html
@@ -1952,25 +1952,37 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                       borderWidth: 1
                     },
                     annotation: {
-                      annotations: {
+                      annotations: nodeScores && nodeScores[node.name] ? {
                         scoreLine: {
                           type: 'line',
-                          yMin: 5,
-                          yMax: 5,
-                          borderColor: isDark ? 'rgba(156, 163, 175, 0.5)' : 'rgba(107, 114, 128, 0.5)',
-                          borderWidth: 2,
+                          yMin: nodeScores[node.name].suitability_rating,
+                          yMax: nodeScores[node.name].suitability_rating,
+                          borderColor: (() => {
+                            const rating = nodeScores[node.name].suitability_rating;
+                            if (rating >= 70) return 'rgba(34, 197, 94, 0.7)'; // Green
+                            if (rating >= 50) return 'rgba(234, 179, 8, 0.7)'; // Yellow
+                            if (rating >= 30) return 'rgba(249, 115, 22, 0.7)'; // Orange
+                            return 'rgba(239, 68, 68, 0.7)'; // Red
+                          })(),
+                          borderWidth: 3,
                           borderDash: [5, 5],
                           label: {
                             display: true,
-                            content: `Node Score: ${nodeScores && nodeScores[node.name] ? nodeScores[node.name].score.toFixed(1) : 'N/A'}`,
+                            content: `Suitability: ${nodeScores[node.name].suitability_rating}%`,
                             position: 'start',
-                            backgroundColor: isDark ? 'rgba(75, 85, 99, 0.9)' : 'rgba(243, 244, 246, 0.9)',
-                            color: isDark ? '#ffffff' : '#111827',
+                            backgroundColor: (() => {
+                              const rating = nodeScores[node.name].suitability_rating;
+                              if (rating >= 70) return isDark ? 'rgba(34, 197, 94, 0.9)' : 'rgba(34, 197, 94, 0.9)'; // Green
+                              if (rating >= 50) return isDark ? 'rgba(234, 179, 8, 0.9)' : 'rgba(234, 179, 8, 0.9)'; // Yellow
+                              if (rating >= 30) return isDark ? 'rgba(249, 115, 22, 0.9)' : 'rgba(249, 115, 22, 0.9)'; // Orange
+                              return isDark ? 'rgba(239, 68, 68, 0.9)' : 'rgba(239, 68, 68, 0.9)'; // Red
+                            })(),
+                            color: '#ffffff',
                             font: { size: 11, weight: 'bold' },
                             padding: 4
                           }
                         }
-                      }
+                      } : {}
                     }
                   },
                   scales: {
@@ -5268,7 +5280,7 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                               if (migrations.length === 0) return;
 
                               // CSV headers
-                              const headers = ['Timestamp', 'VM ID', 'VM Name', 'Source Node', 'Target Node', 'Target Score', 'Reason', 'Confidence Score', 'Status', 'Duration (s)', 'Dry Run', 'Window'];
+                              const headers = ['Timestamp', 'VM ID', 'VM Name', 'Source Node', 'Target Node', 'Suitability %', 'Reason', 'Confidence Score', 'Status', 'Duration (s)', 'Dry Run', 'Window'];
 
                               // CSV rows
                               const rows = migrations.map(m => [
@@ -5277,7 +5289,7 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                                 m.name || '',
                                 m.source_node || '',
                                 m.target_node || '',
-                                m.target_node_score || '',
+                                m.suitability_rating || m.target_node_score || '',
                                 (m.reason || '').replace(/,/g, ';'), // Replace commas in reason
                                 m.confidence_score || '',
                                 m.status || '',
@@ -5369,9 +5381,17 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                                   <span className="text-gray-900 dark:text-white font-medium">{migration.name} ({migration.vmid})</span>
                                   <span className="text-gray-500 dark:text-gray-400 text-xs">
                                     {migration.source_node} → {migration.target_node}
-                                    {migration.target_node_score !== undefined && migration.target_node_score !== null && (
-                                      <span className="ml-1 text-[10px] text-blue-600 dark:text-blue-400 font-semibold">
-                                        (score: {migration.target_node_score})
+                                    {migration.suitability_rating !== undefined && (
+                                      <span className="ml-1 text-[10px]">
+                                        <span className="text-gray-600 dark:text-gray-400">Suitability:</span>{' '}
+                                        <span className={`font-semibold ${
+                                          migration.suitability_rating >= 70 ? 'text-green-600 dark:text-green-400' :
+                                          migration.suitability_rating >= 50 ? 'text-yellow-600 dark:text-yellow-400' :
+                                          migration.suitability_rating >= 30 ? 'text-orange-600 dark:text-orange-400' :
+                                          'text-red-600 dark:text-red-400'
+                                        }`}>
+                                          {migration.suitability_rating}%
+                                        </span>
                                       </span>
                                     )}
                                   </span>
@@ -6425,9 +6445,14 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                               <div className="mb-3 p-3 bg-white dark:bg-gray-800 rounded-lg border-2 border-blue-300 dark:border-blue-600">
                                 <div className="flex items-center justify-between">
                                   <div>
-                                    <div className="text-xs text-gray-500 dark:text-gray-400 mb-1">Overall Suitability Score</div>
-                                    <div className="text-2xl font-bold text-blue-600 dark:text-blue-400">
-                                      {nodeScores[selectedNode.name].score}
+                                    <div className="text-xs text-gray-500 dark:text-gray-400 mb-1">Suitability Rating</div>
+                                    <div className={`text-2xl font-bold ${
+                                      nodeScores[selectedNode.name].suitability_rating >= 70 ? 'text-green-600 dark:text-green-400' :
+                                      nodeScores[selectedNode.name].suitability_rating >= 50 ? 'text-yellow-600 dark:text-yellow-400' :
+                                      nodeScores[selectedNode.name].suitability_rating >= 30 ? 'text-orange-600 dark:text-orange-400' :
+                                      'text-red-600 dark:text-red-400'
+                                    }`}>
+                                      {nodeScores[selectedNode.name].suitability_rating}%
                                     </div>
                                   </div>
                                   <div className="text-right">
@@ -6498,7 +6523,7 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                               </div>
                             </div>
                             <div className="mt-3 text-xs text-gray-500 dark:text-gray-400 italic">
-                              Lower scores = better migration target. High current load, sustained averages, and spikes add penalties to the score.
+                              Suitability Rating: 0-100% score showing how well the target node fits this VM (higher is better). Based on current load, sustained averages, and historical trends. <span className="text-green-600 dark:text-green-400 font-semibold">70%+</span> = Excellent, <span className="text-yellow-600 dark:text-yellow-400 font-semibold">50-69%</span> = Good, <span className="text-orange-600 dark:text-orange-400 font-semibold">30-49%</span> = Fair, <span className="text-red-600 dark:text-red-400 font-semibold">&lt;30%</span> = Poor.
                             </div>
                           </div>
                         )}
@@ -7276,8 +7301,17 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                             </div>
 
                             <div className="flex justify-between pt-1 border-t border-gray-200 dark:border-gray-600">
-                              <span className="text-gray-600 dark:text-gray-400">Score:</span>
-                              <span className="font-semibold text-gray-900 dark:text-white">{nodeScores && nodeScores[node.name] ? nodeScores[node.name].score.toFixed(1) : 'N/A'}</span>
+                              <span className="text-gray-600 dark:text-gray-400">Suitability:</span>
+                              <span className={`font-semibold ${
+                                nodeScores && nodeScores[node.name] ? (
+                                  nodeScores[node.name].suitability_rating >= 70 ? 'text-green-600 dark:text-green-400' :
+                                  nodeScores[node.name].suitability_rating >= 50 ? 'text-yellow-600 dark:text-yellow-400' :
+                                  nodeScores[node.name].suitability_rating >= 30 ? 'text-orange-600 dark:text-orange-400' :
+                                  'text-red-600 dark:text-red-400'
+                                ) : 'text-gray-900 dark:text-white'
+                              }`}>
+                                {nodeScores && nodeScores[node.name] ? `${nodeScores[node.name].suitability_rating}%` : 'N/A'}
+                              </span>
                             </div>
                             <div className="flex justify-between">
                               <span className="text-gray-600 dark:text-gray-400">Guests:</span>
@@ -7413,9 +7447,9 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                               ProxBalance uses intelligent scoring to evaluate every guest on every node. Migrations are recommended when moving a guest would improve its score by <span className="font-bold">15+ points</span>.
                             </p>
                             <ul className="mt-2 ml-4 space-y-1 text-blue-700 dark:text-blue-300 text-xs list-disc">
-                              <li>Lower score = better node for that guest</li>
+                              <li>Suitability Rating: 0-100% score where higher = better target node</li>
                               <li>Scoring considers: current load (50%), 24h average (30%), 7-day average (20%)</li>
-                              <li>Penalties for: high CPU/memory, rising trends, load spikes, predicted overload</li>
+                              <li>Accounts for: CPU/memory usage, trends, load spikes, predicted capacity</li>
                               <li>No arbitrary thresholds - purely data-driven decisions</li>
                             </ul>
                           </div>
@@ -7563,9 +7597,17 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                                   ) : (
                                     <>
                                       <span className="text-red-600 dark:text-red-400 font-medium">FROM:</span> {rec.source_node} → <span className="text-green-600 dark:text-green-400 font-medium">TO:</span> {rec.target_node}
-                                      {nodeScores && (
-                                        <span className="ml-2 text-[10px] text-gray-600 dark:text-gray-400">
-                                          (Target Score: <span className="font-semibold text-blue-600 dark:text-blue-400">{nodeScores[rec.target_node]?.score || 'N/A'}</span>)
+                                      {rec.suitability_rating !== undefined && (
+                                        <span className="ml-2 text-[10px]">
+                                          <span className="text-gray-600 dark:text-gray-400">Suitability:</span>{' '}
+                                          <span className={`font-semibold ${
+                                            rec.suitability_rating >= 70 ? 'text-green-600 dark:text-green-400' :
+                                            rec.suitability_rating >= 50 ? 'text-yellow-600 dark:text-yellow-400' :
+                                            rec.suitability_rating >= 30 ? 'text-orange-600 dark:text-orange-400' :
+                                            'text-red-600 dark:text-red-400'
+                                          }`}>
+                                            {rec.suitability_rating}%
+                                          </span>
                                         </span>
                                       )}
                                     </>
