Add migration progress tracking and increase timeouts
Added real-time migration progress display by parsing Proxmox task logs,
and increased timeouts to handle very large VMs.

Progress Tracking:
- Backend parses Proxmox task logs for transfer progress
- Extracts patterns like "transferred 11.3 GiB of 16.0 GiB (70.88%)"
- Returns progress object with percentage and human-readable size
- Frontend displays animated progress bar with data transferred
- Color-coded: blue for automated, purple for manual migrations

Timeout Increases:
- Migration timeout: 30 min → 60 min (for large VMs like ollama)
- Log fetch timeout: 5s → 10s (for reliability)

Changes:
- app.py: Added progress parsing to in_progress_migrations (lines 5015-5072)
- app.py: Increased log fetch timeout to 10s
- automigrate.py: Increased migration timeout to 3600s (60 min)
- index.html: Added progress bar display with percentage and size

Result: Users can now see real-time migration progress with estimated
completion, and very large VMs won't timeout prematurely.

--- a/index.html
+++ b/index.html
@@ -5262,6 +5262,28 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                                     }`}>Elapsed: {elapsedTime}</span>
                                   </div>
                                 )}
+                                {migration.progress && (
+                                  <div className="mt-2">
+                                    <div className="flex items-center justify-between text-xs mb-1">
+                                      <span className={isAutomated ? 'text-blue-600 dark:text-blue-400 font-semibold' : 'text-purple-600 dark:text-purple-400 font-semibold'}>
+                                        Progress: {migration.progress.percentage}%
+                                      </span>
+                                      <span className="text-gray-500 dark:text-gray-400 text-[10px]">
+                                        {migration.progress.human_readable}
+                                      </span>
+                                    </div>
+                                    <div className="w-full bg-gray-200 dark:bg-gray-700 rounded-full h-2">
+                                      <div
+                                        className={`h-2 rounded-full transition-all duration-300 ${
+                                          isAutomated
+                                            ? 'bg-blue-600 dark:bg-blue-500'
+                                            : 'bg-purple-600 dark:bg-purple-500'
+                                        }`}
+                                        style={{ width: `${migration.progress.percentage}%` }}
+                                      />
+                                    </div>
+                                  </div>
+                                )}
                               </div>
                             );
                           })}
