--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@ const ProxBalanceLogo = ({ size = 32 }) => (
           // Automigrate logs
           const [automigrateLogs, setAutomigrateLogs] = useState(null);
           const [logRefreshTime, setLogRefreshTime] = useState(null);
+          const [migrationLogsTab, setMigrationLogsTab] = useState('history');
 
           // Chart.js lazy loading
           const [chartJsLoaded, setChartJsLoaded] = useState(false);
@@ -3551,60 +3552,199 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                   </div>
                   */}
 
-                  {/* Migration Logs */}
+                  {/* Migration Logs & History */}
                   <div className="bg-white dark:bg-gray-800 rounded-lg shadow p-6 mb-6">
                     <div className="flex items-center justify-between mb-4">
-                      <h2 className="text-xl font-bold text-gray-900 dark:text-white">Migration Logs</h2>
-                      <div className="flex items-center gap-2">
+                      <h2 className="text-xl font-bold text-gray-900 dark:text-white">Migration Logs & History</h2>
+                    </div>
+
+                    {/* Tabs */}
+                    <div className="border-b border-gray-200 dark:border-gray-700 mb-4">
+                      <div className="flex gap-4">
                         <button
-                          onClick={async () => {
-                            try {
-                              const response = await fetch('/api/automigrate/logs?lines=500');
-                              const data = await response.json();
-                              if (data.success) {
-                                setAutomigrateLogs(data.logs);
-                                setLogRefreshTime(new Date().toLocaleTimeString());
-                              }
-                            } catch (error) {
-                              console.error('Error fetching logs:', error);
-                            }
-                          }}
-                          className="px-3 py-1.5 bg-blue-600 hover:bg-blue-700 text-white rounded text-sm font-medium flex items-center gap-2"
+                          onClick={() => setMigrationLogsTab('history')}
+                          className={`px-4 py-2 text-sm font-medium border-b-2 transition-colors ${
+                            migrationLogsTab === 'history'
+                              ? 'border-blue-600 text-blue-600 dark:text-blue-400'
+                              : 'border-transparent text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-300'
+                          }`}
                         >
-                          <RefreshCw size={14} />
-                          Refresh
+                          Migration History
                         </button>
                         <button
-                          onClick={() => {
-                            if (!automigrateLogs) return;
-                            const blob = new Blob([automigrateLogs], { type: 'text/plain' });
-                            const url = window.URL.createObjectURL(blob);
-                            const a = document.createElement('a');
-                            a.href = url;
-                            a.download = `automigrate-logs-${new Date().toISOString().split('T')[0]}.txt`;
-                            document.body.appendChild(a);
-                            a.click();
-                            document.body.removeChild(a);
-                            window.URL.revokeObjectURL(url);
-                          }}
-                          disabled={!automigrateLogs}
-                          className="px-3 py-1.5 bg-green-600 hover:bg-green-700 disabled:bg-gray-400 disabled:cursor-not-allowed text-white rounded text-sm font-medium flex items-center gap-2"
+                          onClick={() => setMigrationLogsTab('logs')}
+                          className={`px-4 py-2 text-sm font-medium border-b-2 transition-colors ${
+                            migrationLogsTab === 'logs'
+                              ? 'border-blue-600 text-blue-600 dark:text-blue-400'
+                              : 'border-transparent text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-300'
+                          }`}
                         >
-                          <Download size={14} />
-                          Download
+                          Script Logs
                         </button>
                       </div>
                     </div>
-                    {logRefreshTime && (
-                      <div className="text-xs text-gray-500 dark:text-gray-400 mb-2">
-                        Last updated: {logRefreshTime}
+
+                    {/* Migration History Table */}
+                    {migrationLogsTab === 'history' && (
+                      <div>
+                        <div className="flex items-center justify-between mb-3">
+                          <div className="text-sm text-gray-600 dark:text-gray-400">
+                            Showing all automated migrations
+                          </div>
+                          <button
+                            onClick={fetchAutomationStatus}
+                            className="px-3 py-1.5 bg-blue-600 hover:bg-blue-700 text-white rounded text-sm font-medium flex items-center gap-2"
+                          >
+                            <RefreshCw size={14} />
+                            Refresh
+                          </button>
+                        </div>
+                        <div className="overflow-x-auto">
+                          <table className="w-full text-sm">
+                            <thead className="bg-gray-50 dark:bg-gray-700">
+                              <tr>
+                                <th className="px-4 py-3 text-left text-xs font-semibold text-gray-700 dark:text-gray-300">Time</th>
+                                <th className="px-4 py-3 text-left text-xs font-semibold text-gray-700 dark:text-gray-300">VM</th>
+                                <th className="px-4 py-3 text-left text-xs font-semibold text-gray-700 dark:text-gray-300">Migration</th>
+                                <th className="px-4 py-3 text-left text-xs font-semibold text-gray-700 dark:text-gray-300">Reason</th>
+                                <th className="px-4 py-3 text-left text-xs font-semibold text-gray-700 dark:text-gray-300">Status</th>
+                                <th className="px-4 py-3 text-left text-xs font-semibold text-gray-700 dark:text-gray-300">Duration</th>
+                              </tr>
+                            </thead>
+                            <tbody className="divide-y divide-gray-200 dark:divide-gray-700">
+                              {automationStatus.recent_migrations && automationStatus.recent_migrations.length > 0 ? (
+                                automationStatus.recent_migrations.slice().reverse().map((migration) => {
+                                  // Format timestamp
+                                  let timeDisplay = '';
+                                  if (migration.timestamp) {
+                                    try {
+                                      const timestamp = migration.timestamp.endsWith('Z') ? migration.timestamp : migration.timestamp + 'Z';
+                                      const migrationDate = new Date(timestamp);
+                                      timeDisplay = migrationDate.toLocaleString();
+                                    } catch (e) {
+                                      timeDisplay = migration.timestamp;
+                                    }
+                                  }
+
+                                  // Format duration
+                                  const durationDisplay = migration.duration_seconds
+                                    ? `${Math.floor(migration.duration_seconds / 60)}m ${migration.duration_seconds % 60}s`
+                                    : '-';
+
+                                  return (
+                                    <tr key={migration.id} className="hover:bg-gray-50 dark:hover:bg-gray-700/50">
+                                      <td className="px-4 py-3 text-xs text-gray-600 dark:text-gray-400 whitespace-nowrap">
+                                        {timeDisplay}
+                                      </td>
+                                      <td className="px-4 py-3">
+                                        <div className="text-sm font-medium text-gray-900 dark:text-white">
+                                          {migration.name}
+                                        </div>
+                                        <div className="text-xs text-gray-500 dark:text-gray-400">
+                                          ID: {migration.vmid}
+                                        </div>
+                                      </td>
+                                      <td className="px-4 py-3 text-xs">
+                                        <div className="flex items-center gap-1 text-gray-600 dark:text-gray-400">
+                                          <span className="font-mono">{migration.source_node}</span>
+                                          <ArrowRight size={12} />
+                                          <span className="font-mono">{migration.target_node}</span>
+                                        </div>
+                                      </td>
+                                      <td className="px-4 py-3 text-xs text-gray-600 dark:text-gray-400 max-w-xs">
+                                        <div className="truncate" title={migration.reason}>
+                                          {migration.reason}
+                                        </div>
+                                      </td>
+                                      <td className="px-4 py-3">
+                                        <span className={`px-2 py-1 rounded text-xs font-semibold inline-flex items-center gap-1 ${
+                                          migration.status === 'completed'
+                                            ? 'bg-green-100 text-green-700 dark:bg-green-900/30 dark:text-green-400'
+                                            : migration.status === 'failed'
+                                            ? 'bg-red-100 text-red-700 dark:bg-red-900/30 dark:text-red-400'
+                                            : migration.status === 'timeout'
+                                            ? 'bg-orange-100 text-orange-700 dark:bg-orange-900/30 dark:text-orange-400'
+                                            : 'bg-gray-100 text-gray-700 dark:bg-gray-900/30 dark:text-gray-400'
+                                        }`}>
+                                          {migration.status === 'completed' && <CheckCircle size={12} />}
+                                          {migration.status === 'failed' && <XCircle size={12} />}
+                                          {migration.status === 'timeout' && <Clock size={12} />}
+                                          {migration.status}
+                                        </span>
+                                      </td>
+                                      <td className="px-4 py-3 text-xs text-gray-600 dark:text-gray-400 whitespace-nowrap">
+                                        {durationDisplay}
+                                      </td>
+                                    </tr>
+                                  );
+                                })
+                              ) : (
+                                <tr>
+                                  <td colSpan="6" className="px-4 py-8 text-center text-sm text-gray-500 dark:text-gray-400">
+                                    No migration history available
+                                  </td>
+                                </tr>
+                              )}
+                            </tbody>
+                          </table>
+                        </div>
                       </div>
                     )}
-                    <div className="bg-gray-900 dark:bg-black rounded border border-gray-700 p-4 max-h-96 overflow-y-auto">
-                      <pre className="text-xs text-green-400 font-mono whitespace-pre-wrap">
-                        {automigrateLogs || 'Click "Refresh" to load logs...'}
-                      </pre>
-                    </div>
+
+                    {/* Script Logs */}
+                    {migrationLogsTab === 'logs' && (
+                      <div>
+                        <div className="flex items-center justify-between mb-3">
+                          <div className="text-xs text-gray-500 dark:text-gray-400">
+                            {logRefreshTime && `Last updated: ${logRefreshTime}`}
+                          </div>
+                          <div className="flex items-center gap-2">
+                            <button
+                              onClick={async () => {
+                                try {
+                                  const response = await fetch('/api/automigrate/logs?lines=500');
+                                  const data = await response.json();
+                                  if (data.success) {
+                                    setAutomigrateLogs(data.logs);
+                                    setLogRefreshTime(new Date().toLocaleTimeString());
+                                  }
+                                } catch (error) {
+                                  console.error('Error fetching logs:', error);
+                                }
+                              }}
+                              className="px-3 py-1.5 bg-blue-600 hover:bg-blue-700 text-white rounded text-sm font-medium flex items-center gap-2"
+                            >
+                              <RefreshCw size={14} />
+                              Refresh
+                            </button>
+                            <button
+                              onClick={() => {
+                                if (!automigrateLogs) return;
+                                const blob = new Blob([automigrateLogs], { type: 'text/plain' });
+                                const url = window.URL.createObjectURL(blob);
+                                const a = document.createElement('a');
+                                a.href = url;
+                                a.download = `automigrate-logs-${new Date().toISOString().split('T')[0]}.txt`;
+                                document.body.appendChild(a);
+                                a.click();
+                                document.body.removeChild(a);
+                                window.URL.revokeObjectURL(url);
+                              }}
+                              disabled={!automigrateLogs}
+                              className="px-3 py-1.5 bg-green-600 hover:bg-green-700 disabled:bg-gray-400 disabled:cursor-not-allowed text-white rounded text-sm font-medium flex items-center gap-2"
+                            >
+                              <Download size={14} />
+                              Download
+                            </button>
+                          </div>
+                        </div>
+                        <div className="bg-gray-900 dark:bg-black rounded border border-gray-700 p-4 max-h-96 overflow-y-auto">
+                          <pre className="text-xs text-green-400 font-mono whitespace-pre-wrap">
+                            {automigrateLogs || 'Click "Refresh" to load logs...'}
+                          </pre>
+                        </div>
+                      </div>
+                    )}
                   </div>
 
                   {/* Time Windows (Unified) */}
